# yomi

./: .gitignore  Cargo.toml  _.lua  config.lua
scripts/: aliases.lua  another_viewer.lua  answers.lua  commands.lua  crates.lua  greeting.lua  help.lua  init.lua  settings.lua  spotify.lua  twitch.lua
sql/aliases/: add_alias.sql  add_command.sql  clear_aliases.sql  contains.sql  get_aliases.sql  list.sql  list_aliases.sql  remove_alias.sql  resolve.sql  schema.sql
sql/spotify/: all.sql  clear.sql  count.sql  last.sql  push.sql  remove.sql  remove_all.sql  schema.sql
sql/store/: get.sql  keys.sql  schema.sql  set.sql  values.sql
src/: aliases.rs  bot.rs  config.rs  crates.rs  format.rs  fuzzy.rs  github.rs  globals.rs  helix.rs  help.rs  irc.rs  json.rs  lib.rs  loaded.rs  logger.rs  main.rs  manifest.rs  pattern.rs  rand.rs  re.rs  responder.rs  spotify.rs  sql.rs  store.rs  time.rs  watcher.rs
src/manifest/: handled.rs  mapping.rs
