[package]
name = "yomi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
flume = { version = "0.11.1", default-features = false, features = [ "select", "eventual-fairness" ] }
mlua = { version = "0.10.2", features = [ "vendored", "lua54", "serialize", "macros" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.135"
simple_env_load = "0.2.0"
twitch_message = { git = "https://github.com/museun/twitch_message", version = "0.1.2", features = [ "std" ] }
ureq = "2.12.1"
